# File-Synchronizer

./: .gitignore  README  README.md
file_sync/: Cargo.toml
file_sync/src/: config.rs  file_utils.rs  main.rs  sync.rs
